@@ -1,9 +1,40 @@
-import numpy as np
-from seemps.state import MPS, MPSSum
-from seemps.qft import qft, iqft, qft_flip
+from seemps.state import MPS, MPSSum, Strategy, DEFAULT_STRATEGY
+from seemps.operators import MPOList
+from seemps.qft import qft_mpo
 from seemps.analysis.operators import p_to_n_mpo, p_mpo
 
-def fourier_derivative(psi: MPS | MPSSum, L: float, order: int) -> MPS | MPSSum:
+
+def fourier_derivative_mpo(
+    L: int, order: int, dx: float = 1.0, strategy: Strategy = DEFAULT_STRATEGY
+) -> MPOList:
+    """Nth-order derivative operator via Quantum Fourier Transform.
+
+    Compute the `order`-th spatial derivative operator that can be applied on
+    any function encoded as quantized tensor train, and defined on a uniform
+    grid of length `L`.
+
+    Parameters
+    ----------
+    L : int
+        Length of the quantum register
+    order : int
+        Order of the derivative
+
+    Returns
+    -------
+    MPOList
+        Operator that implements the derivative.
+    """
+    forward_qft = qft_mpo(L, -1, strategy)
+    if order == 1:
+        P_op = 1j * p_mpo(L, dx)
+    else:
+        P_op = ((1j) ** order) * p_to_n_mpo(L, dx, order)
+    backward_qft = qft_mpo(L, +1, strategy)
+    return (backward_qft @ P_op).reverse() @ forward_qft
+
+
+def fourier_derivative(psi: MPS | MPSSum, order: int, L: float) -> MPS | MPSSum:
     """Nth-order derivative via Quantum Fourier Transform.
 
     Compute the `order`-th spatial derivative of a quantum state `psi`
@@ -26,20 +57,4 @@ def fourier_derivative(psi: MPS | MPSSum, L: float, order: int) -> MPS | MPSSum:
     """
     N = psi.size
     dx = L / (2**N)
-
-    # QFT
-    psi_k_reversed_mps = qft(psi)
-    psi_k_mps = qft_flip(psi_k_reversed_mps)
-
-    # Apply momentum operator
-    if order == 1:
-        P_op = p_mpo(N, dx)
-    else:
-        P_op = p_to_n_mpo(N, dx, order)
-    d_psi_k_mps = (1j)**order * (P_op @ psi_k_mps)
-
-    # Inverse QFT
-    d_psi_x_reversed_mps = iqft(d_psi_k_mps)
-    d_psi_x_mps = qft_flip(d_psi_x_reversed_mps)
-
-    return d_psi_x_mps
+    return fourier_derivative_mpo(N, order, dx).apply(psi)
